# deeper-net

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/data_types/: array.h  matrix.h  tensor.h  tools.h
include/derivative/: functions.h  operators.h
include/misc/: exception.h  random.h
include/nn/: operator.h
include/nn/operators/: activation.h  dense.h  operator.h  relu.h
src/data_types/: array.cpp  array.h  matrix.cc  matrix_test.cc  tensor.cpp  tensor.h  tensor_test.cc  tensor_test.cpp  tools.h
src/derivative/: operators_test.cc
src/misc/: exception.cc  exception_test.cc  misc_test.cpp  random.cc
src/nn/: operator.cc
src/nn/operators/: op_test.cc  operator.cc  relu.cc  relu_test.cc
